rusqlite/libsqlite3-sys/src/bindgen.rs

    pub fn sqlite3_auto_extension(xEntryPoint:
                                      ::std::option::Option<extern "C" fn()>)
     -> ::std::os::raw::c_int;
    pub fn sqlite3_cancel_auto_extension(xEntryPoint:
                                             ::std::option::Option<extern "C" fn()>)
     -> ::std::os::raw::c_int;
    pub fn sqlite3_reset_auto_extension();
    pub fn sqlite3_create_module(db: *mut sqlite3,
                                 zName: *const ::std::os::raw::c_char,
                                 p: *const sqlite3_module,
                                 pClientData: *mut ::std::os::raw::c_void)
     -> ::std::os::raw::c_int;
    pub fn sqlite3_create_module_v2(db: *mut sqlite3,
                                    zName: *const ::std::os::raw::c_char,
                                    p: *const sqlite3_module,
                                    pClientData: *mut ::std::os::raw::c_void,
                                    xDestroy:
                                        ::std::option::Option<unsafe extern "C" fn(arg1:
                                                                                       *mut ::std::os::raw::c_void)>)
     -> ::std::os::raw::c_int;
    pub fn sqlite3_declare_vtab(arg1: *mut sqlite3,
                                zSQL: *const ::std::os::raw::c_char)
     -> ::std::os::raw::c_int;
    pub fn sqlite3_overload_function(arg1: *mut sqlite3,
                                     zFuncName: *const ::std::os::raw::c_char,
                                     nArg: ::std::os::raw::c_int)
     -> ::std::os::raw::c_int;
    pub fn sqlite3_blob_open(arg1: *mut sqlite3,
                             zDb: *const ::std::os::raw::c_char,
                             zTable: *const ::std::os::raw::c_char,
                             zColumn: *const ::std::os::raw::c_char,
                             iRow: sqlite3_int64,
                             flags: ::std::os::raw::c_int,
                             ppBlob: *mut *mut sqlite3_blob)
     -> ::std::os::raw::c_int;
    pub fn sqlite3_blob_reopen(arg1: *mut sqlite3_blob, arg2: sqlite3_int64)
     -> ::std::os::raw::c_int;
    pub fn sqlite3_blob_close(arg1: *mut sqlite3_blob)
     -> ::std::os::raw::c_int;
    pub fn sqlite3_blob_bytes(arg1: *mut sqlite3_blob)
     -> ::std::os::raw::c_int;
    pub fn sqlite3_blob_read(arg1: *mut sqlite3_blob,
                             Z: *mut ::std::os::raw::c_void,
                             N: ::std::os::raw::c_int,
                             iOffset: ::std::os::raw::c_int)
     -> ::std::os::raw::c_int;
    pub fn sqlite3_blob_write(arg1: *mut sqlite3_blob,
                              z: *const ::std::os::raw::c_void,
                              n: ::std::os::raw::c_int,
                              iOffset: ::std::os::raw::c_int)
     -> ::std::os::raw::c_int;
    pub fn sqlite3_vfs_find(zVfsName: *const ::std::os::raw::c_char)
     -> *mut sqlite3_vfs;
    pub fn sqlite3_vfs_register(arg1: *mut sqlite3_vfs,
                                makeDflt: ::std::os::raw::c_int)
     -> ::std::os::raw::c_int;
    pub fn sqlite3_vfs_unregister(arg1: *mut sqlite3_vfs)
     -> ::std::os::raw::c_int;
    pub fn sqlite3_mutex_alloc(arg1: ::std::os::raw::c_int)
     -> *mut sqlite3_mutex;
    pub fn sqlite3_mutex_free(arg1: *mut sqlite3_mutex);
    pub fn sqlite3_mutex_enter(arg1: *mut sqlite3_mutex);
    pub fn sqlite3_mutex_try(arg1: *mut sqlite3_mutex)
     -> ::std::os::raw::c_int;
    pub fn sqlite3_mutex_leave(arg1: *mut sqlite3_mutex);
    pub fn sqlite3_mutex_held(arg1: *mut sqlite3_mutex)
     -> ::std::os::raw::c_int;
    pub fn sqlite3_mutex_notheld(arg1: *mut sqlite3_mutex)
     -> ::std::os::raw::c_int;
    pub fn sqlite3_db_mutex(arg1: *mut sqlite3) -> *mut sqlite3_mutex;
    pub fn sqlite3_file_control(arg1: *mut sqlite3,
                                zDbName: *const ::std::os::raw::c_char,
                                op: ::std::os::raw::c_int,
                                arg2: *mut ::std::os::raw::c_void)
     -> ::std::os::raw::c_int;
    pub fn sqlite3_test_control(op: ::std::os::raw::c_int, ...)
     -> ::std::os::raw::c_int;
    pub fn sqlite3_status(op: ::std::os::raw::c_int,
                          pCurrent: *mut ::std::os::raw::c_int,
                          pHighwater: *mut ::std::os::raw::c_int,
                          resetFlag: ::std::os::raw::c_int)
     -> ::std::os::raw::c_int;
    pub fn sqlite3_status64(op: ::std::os::raw::c_int,
                            pCurrent: *mut sqlite3_int64,
                            pHighwater: *mut sqlite3_int64,
                            resetFlag: ::std::os::raw::c_int)
     -> ::std::os::raw::c_int;
    pub fn sqlite3_db_status(arg1: *mut sqlite3, op: ::std::os::raw::c_int,
                             pCur: *mut ::std::os::raw::c_int,
                             pHiwtr: *mut ::std::os::raw::c_int,
                             resetFlg: ::std::os::raw::c_int)
     -> ::std::os::raw::c_int;
    pub fn sqlite3_stmt_status(arg1: *mut sqlite3_stmt,
                               op: ::std::os::raw::c_int,
                               resetFlg: ::std::os::raw::c_int)
     -> ::std::os::raw::c_int;
    pub fn sqlite3_backup_init(pDest: *mut sqlite3,
                               zDestName: *const ::std::os::raw::c_char,
                               pSource: *mut sqlite3,
                               zSourceName: *const ::std::os::raw::c_char)
     -> *mut sqlite3_backup;
    pub fn sqlite3_backup_step(p: *mut sqlite3_backup,
                               nPage: ::std::os::raw::c_int)
     -> ::std::os::raw::c_int;
    pub fn sqlite3_backup_finish(p: *mut sqlite3_backup)
     -> ::std::os::raw::c_int;
    pub fn sqlite3_backup_remaining(p: *mut sqlite3_backup)
     -> ::std::os::raw::c_int;
    pub fn sqlite3_backup_pagecount(p: *mut sqlite3_backup)
     -> ::std::os::raw::c_int;
    pub fn sqlite3_unlock_notify(pBlocked: *mut sqlite3,
                                 xNotify:
                                     ::std::option::Option<unsafe extern "C" fn(apArg:
                                                                                    *mut *mut ::std::os::raw::c_void,
                                                                                nArg:
                                                                                    ::std::os::raw::c_int)>,
                                 pNotifyArg: *mut ::std::os::raw::c_void)
     -> ::std::os::raw::c_int;
    pub fn sqlite3_stricmp(arg1: *const ::std::os::raw::c_char,
                           arg2: *const ::std::os::raw::c_char)
     -> ::std::os::raw::c_int;
    pub fn sqlite3_strnicmp(arg1: *const ::std::os::raw::c_char,
                            arg2: *const ::std::os::raw::c_char,
                            arg3: ::std::os::raw::c_int)
     -> ::std::os::raw::c_int;
    pub fn sqlite3_strglob(zGlob: *const ::std::os::raw::c_char,
                           zStr: *const ::std::os::raw::c_char)
     -> ::std::os::raw::c_int;
    pub fn sqlite3_strlike(zGlob: *const ::std::os::raw::c_char,
                           zStr: *const ::std::os::raw::c_char,
                           cEsc: ::std::os::raw::c_uint)
     -> ::std::os::raw::c_int;
    pub fn sqlite3_log(iErrCode: ::std::os::raw::c_int,
                       zFormat: *const ::std::os::raw::c_char, ...);
    pub fn sqlite3_wal_hook(arg1: *mut sqlite3,
                            arg2:
                                ::std::option::Option<unsafe extern "C" fn(arg1:
                                                                               *mut ::std::os::raw::c_void,
                                                                           arg2:
                                                                               *mut sqlite3,
                                                                           arg3:
                                                                               *const ::std::os::raw::c_char,
                                                                           arg4:
                                                                               ::std::os::raw::c_int)
                                                          ->
                                                              ::std::os::raw::c_int>,
                            arg3: *mut ::std::os::raw::c_void)
     -> *mut ::std::os::raw::c_void;
    pub fn sqlite3_wal_autocheckpoint(db: *mut sqlite3,
                                      N: ::std::os::raw::c_int)
     -> ::std::os::raw::c_int;
    pub fn sqlite3_wal_checkpoint(db: *mut sqlite3,
                                  zDb: *const ::std::os::raw::c_char)
     -> ::std::os::raw::c_int;
    pub fn sqlite3_wal_checkpoint_v2(db: *mut sqlite3,
                                     zDb: *const ::std::os::raw::c_char,
                                     eMode: ::std::os::raw::c_int,
                                     pnLog: *mut ::std::os::raw::c_int,
                                     pnCkpt: *mut ::std::os::raw::c_int)
     -> ::std::os::raw::c_int;
    pub fn sqlite3_vtab_config(arg1: *mut sqlite3,
                               op: ::std::os::raw::c_int, ...)
     -> ::std::os::raw::c_int;
    pub fn sqlite3_vtab_on_conflict(arg1: *mut sqlite3)
     -> ::std::os::raw::c_int;
    pub fn sqlite3_stmt_scanstatus(pStmt: *mut sqlite3_stmt,
                                   idx: ::std::os::raw::c_int,
                                   iScanStatusOp: ::std::os::raw::c_int,
                                   pOut: *mut ::std::os::raw::c_void)
     -> ::std::os::raw::c_int;
    pub fn sqlite3_stmt_scanstatus_reset(arg1: *mut sqlite3_stmt);
    pub fn sqlite3_db_cacheflush(arg1: *mut sqlite3) -> ::std::os::raw::c_int;
    pub fn sqlite3_preupdate_hook(db: *mut sqlite3,
                                  xPreUpdate:
                                      ::std::option::Option<unsafe extern "C" fn(pCtx:
                                                                                     *mut ::std::os::raw::c_void,
                                                                                 db:
                                                                                     *mut sqlite3,
                                                                                 op:
                                                                                     ::std::os::raw::c_int,
                                                                                 zDb:
                                                                                     *const ::std::os::raw::c_char,
                                                                                 zName:
                                                                                     *const ::std::os::raw::c_char,
                                                                                 iKey1:
                                                                                     sqlite3_int64,
                                                                                 iKey2:
                                                                                     sqlite3_int64)>,
                                  arg1: *mut ::std::os::raw::c_void)
     -> *mut ::std::os::raw::c_void;
    pub fn sqlite3_preupdate_old(arg1: *mut sqlite3,
                                 arg2: ::std::os::raw::c_int,
                                 arg3: *mut *mut sqlite3_value)
     -> ::std::os::raw::c_int;
    pub fn sqlite3_preupdate_count(arg1: *mut sqlite3)
     -> ::std::os::raw::c_int;
    pub fn sqlite3_preupdate_depth(arg1: *mut sqlite3)
     -> ::std::os::raw::c_int;
    pub fn sqlite3_preupdate_new(arg1: *mut sqlite3,
                                 arg2: ::std::os::raw::c_int,
                                 arg3: *mut *mut sqlite3_value)
     -> ::std::os::raw::c_int;
